# host-object-test

./: .gitignore  App.js  README.md  app.json  package.json
android/: .project  build.gradle  settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/androidjsi/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
cpp/: TestBinding.cpp
ios/: Podfile
ios/androidjsi/: AppDelegate.m  Info.plist
ios/androidjsi.xcodeproj/: project.pbxproj
ios/androidjsi.xcodeproj/xcshareddata/xcschemes/: androidjsi-tvOS.xcscheme  androidjsi.xcscheme
ios/androidjsi.xcworkspace/: contents.xcworkspacedata
ios/androidjsi/Base.lproj/: LaunchScreen.xib
ios/androidjsiTests/: androidjsiTests.m
libs/android-jsi/: .project  settings.gradle
libs/android-jsi/test-jsi/: .gitignore
libs/android-jsi/test-jsi/gradle/wrapper/: gradle-wrapper.properties
libs/android-jsi/test-jsi/src/main/: AndroidManifest.xml
libs/android-jsi/test-jsi/src/main/cpp/: CMakeLists.txt  TestJSIInstaller.cpp  TestJSIInstaller.h
libs/android-jsi/test-jsi/src/main/java/com/terrysahaidak/test/jsi/: TestJSIInstaller.java
